--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
-.none {
-display: none;
+*{
+margin: 0;
+padding: 0;
+
+}
+
+body{
+    background-color: #4a4946;
+}
+
+.simple-todo {
+height: 100vh;
+background-color: #4a4946;
+color: white;
+}
+
+#head {
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 40%;
+    background-color: gray;
+    text-align: center;
+    border-radius: 2px;
+}
+
+#list {
+    width: 40%;
+    height: 40vh;
+    background-color: gray;
+    border-radius: 2px;
+    margin: 10px;
+}
+
+li{
+    display: block;
+    border: 2px solid white;
+    border-radius: 5px;
+    margin-top: 4px;
+    padding-left: 5px;
+}
+.btnDel {
+    height: 26px;
+    width: 5%;
+    margin-right: 15px;
+    color: #4a4946;
+}
+
+#todo-form {
+    width: 40%; 
+    margin-left: 10px; 
+    height: 30px;
+    background-color: gray;
+    border-radius: 2px;
+}
+
+#add {
+    height: 90%;
+    width: 5%;
+    margin-left: 5px;
+    color: #4a4946;
+}
+#todo-input {
+    height: 78%;
+    width: 88%;
+    margin-top: 1px;
 }
