--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@ body{
 }
 
 .simple-todo {
-height: 51vh;
-width: 50%;
+height: 500px;
+width: 500px;
 border: 2px solid white;
 float: left;
 }
 #head {
     margin-left: 10px;
     margin-top: 10px;
-    width: 95%;
+    width: 480px;
     background-color: gray;
     text-align: center;
     border-radius: 2px;
@@ -24,8 +24,8 @@ float: left;
 }
 
 #list {
-    width: 95%;
-    height: 40vh;
+    width: 480px;
+    height: 400px;
     background-color: gray;
     border-radius: 2px;
     margin: 10px;
@@ -39,15 +39,15 @@ li{
     padding-left: 5px;
 }
 .btnDel {
-    height: 26px;
-    width: 5%;
+    height: 25px;
+    width: 25px;
     margin-right: 15px;
     color: #4a4946;
 }
 
 
 #todo-form {
-    width: 95%; 
+    width: 480px; 
     margin-left: 10px; 
     height: 34px;
     background-color: gray;
@@ -55,15 +55,16 @@ li{
     float: left;
 }
 #add {
-    height: 90%;
-    width: 5%;
+    height: 25px;
+    width: 25px;
     margin-left: 5px;
     color: #4a4946;
 }
 #todo-input {
-    height: 78%;
-    width: 88%;
-    margin-top: 2px;
+    height: 22px;
+    width: 435px;
+    margin-top: 4px;
+
 }
 
 
