--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     color: white;
 }
 
+
 #simple-todo {
 height: 528px;
 width: 500px;
@@ -54,18 +55,26 @@ position: fixed;
 }
 li{
     display: block;
+    position: relative;
+    height: 20px;
     border: 2px solid white;
     border-radius: 5px;
     margin-top: 4px;
     padding-left: 5px;
 }
 .btnDel {
-    height: 25px;
-    width: 25px;
-    margin-right: 15px;
+    display: inline-block;
+    position: relative;
+    top: 2px;
+    height: 10px;
+    width: 10px;
+    margin-right: 4px;
     color: #4a4946;
+    border: 2px solid white;
+    border-radius: 100px;
+    text-align: center;
+    text-align: center;
 }
-
 
 #todo-form {
     position: relative;
@@ -76,33 +85,28 @@ li{
     border-radius: 2px;
     float: left;
 }
-#add {
-    position: relative;
-    float: left;
-    height: 25px;
-    width: 25px;
-    margin-left: 5px;
-    color: #4a4946;
-}
+
 #todo-input {
     position: relative;
     float: left;
-    margin-left: 10px;
-    height: 22px;
-    width: 400px;
-    margin-top: 4px;
+    margin-left: 4px;
+    height: 30px;
+    width: 444px;
+    margin-top: 2px;
     overflow: hidden;
 
 }
 
 .add-button {
-    display: block;
-    height: 14px;
-    width: 14px;
-    border: 2px solid white;
+    position: relative;
+    float: left;
+    height: 34px;
+    width: 30px;
+    border-radius: 2px;
     text-align: center;
-    line-height: 20px;
+    line-height: 30px;
 }
+
     .add-button:hover {
         cursor: pointer;
         background-color: white;
@@ -121,7 +125,9 @@ li{
         color: gray;
         border-radius: 4px;
     }
-
+    .btnDel:hover {
+        background-color: #4a4946;
+    }
     [contentEditable=true]:empty:not(:focus):before {
-        content: attr(data-text);
+        content: attr(data-placeholder);
       }
