--- a/style.css
+++ b/style.css
@@ -55,11 +55,14 @@ position: fixed;
 li{
     display: block;
     position: relative;
-    height: 20px;
+    min-height: 20px;
+    max-height: 70px;
     border: 2px solid white;
     border-radius: 5px;
     margin-top: 4px;
     padding-left: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
     overflow: scroll;
 }
 .btnDel {
@@ -95,8 +98,7 @@ li{
     margin-top: 2px;
     padding-top: 5px;
     padding-left: 2px;
-    overflow: hidden;
-
+    overflow: scroll;
 }
 
 .add-button {
